--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,17 @@ body {
     font-size: 20px;
 }
 
+#cabecera {
+    background: #33A;
+    box-shadow: 0ps 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
