--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-    color: #333 ;
+    background: #1e1f24 ;
+    color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -15,21 +16,31 @@ body {
     margin: 0 auto;
 }
 
-#container h1{
-    font-size: 20px;
-}
-
 #cabecera {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0ps 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
+}
+
+#cabecera #logo{ 
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+}
+
+#container h1{
+    font-size: 20px;
+}
+
+#post {
+    background: white;
+    padding: 1em;
 }
